kubernetes/overlays/staging/nginx-service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-gateway
spec:
  type: ClusterIP
